--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap'); /* importando fontes do google fonts */
 
 * {
-    font-size: 1em;
+    font-size: 1em; /* lembra que 1em é igual a 16px */
     font-family: 'Dancing Script', cursive;
     margin: 0;
     padding: 0;
@@ -10,22 +10,25 @@
 body {
     background: burlywood;
 }
+
 p {
    color: #11E9FF; 
    text-align: right;
 }
+
 p#paragrafo-cachorro {
     color: blueviolet;
     text-align: left;
 }
+
 p.paragrafo-gato {
     color: red;
-    text-transform: lowercase;
+    text-transform: lowercase; /* texto em caia baixa */
 }
 
 p.paragrafo-gato {
-    color: rgba(88, 24, 69, 0.8);
-    text-align: center;
+    color: rgba(88, 24, 69, 0.8); /* dá para colocar opacidade, vai de 0 a 1 */
+    text-align: center; /* alinhando texto ao centro */
 }
 
 p.paragrafo-gato > a {
@@ -38,17 +41,17 @@ p#paragrafo-cachorro a.link-pp{
 
 p#paragrafo-cachorro a.link-pp:hover {
     color: darkmagenta;
-    box-shadow: 10px 5px 10px darkmagenta;
+    box-shadow: 10px 5px 10px darkmagenta; /* usando box shadow no hover, quando passa o mouse */
 }
 
 button.btn-vanessa {
-    padding: 10px 20px;
-    margin: 40px;
+    padding: 10px 20px; /* espacamento interno */
+    margin: 40px; /* espacamento externo */
 }
 
 .paragrafo-gato, #paragrafo-cachorro {
     font-size: 45px;
-    border: 1px solid #11E9FF;
+    border: 1px solid #11E9FF; /* colocando borda */
 }
 
 a[title] {
@@ -63,7 +66,6 @@ a[href*="picpay"] {
     font-family: 'Arial';
     font-weight: bold;
 } 
-
 
 a[href$=".com"] {
     font-family: 'Dancing Script', cursive;
